# zypp-downloader

./: README.md  pyproject.toml  test_downloader.py  zypp-downloader
.github/workflows/: ci.yml
